tests/semantic_cases/invalid/typed_assignment_bool_to_integer.ob0
(* INVALID: typed assignment uses BOOLEAN value for INTEGER target *)
MODULE Main;
VAR flag: BOOLEAN;
VAR x: INTEGER;
BEGIN
  x := flag
END Main.
